# yolo_simple_demo

./: CMakeLists.txt  README.md
cmake/: Dependencies.cmake  android.toolchain.cmake
common/: CMakeLists.txt  blocking_queue.cpp  clas_processor.cpp  common_functions.cpp  data_provider.cpp  gflags_common.cpp  off_clas_data_provider.cpp  off_data_provider.cpp  off_gflags_spec.cpp  off_runner.cpp  pipeline.cpp  queue.cpp  runner_strategy.cpp  simple_interface.cpp
common/include/: clas_processor.hpp  command_option.hpp  common_functions.hpp  data_provider.hpp  handler.hpp  off_clas_data_provider.hpp  off_data_provider.hpp  off_runner.hpp  pipeline.hpp  post_processor.hpp  runner.hpp  runner_strategy.hpp  threadPool.h
common_yolov5/: CMakeLists.txt  common_functions.cpp  data_provider.cpp  gflags_common.cpp
common_yolov5/include/: command_option.hpp  data_provider.hpp
scripts/: build_offline.sh  build_offline_aarch64.sh
yolov5/: README.md  yolov5_offline_multicore.cpp
yolov5/post_process/: yolov5_off_post.cpp  yolov5_off_post.hpp  yolov5_processor.cpp  yolov5_processor.hpp
yolov8/: CMakeLists.txt  yolov8_offline_multicore.cpp
yolov8/post_process/: yolov8_off_post.cpp  yolov8_off_post.hpp  yolov8_processor.cpp  yolov8_processor.hpp
